--- a/continuous_improvement/static/description/index.html
+++ b/continuous_improvement/static/description/index.html
@@ -1,5 +1,5 @@
 
-<section class="oe_container" style="background-image:url(https://www.cybrosys.com/images/odoo-index-header-banner.png); background-repeat:no-repeat; background-size:cover;padding: 13% 0% 22% 15%;">
+<section class="oe_container" style="background-image:url(banner.png); background-repeat:no-repeat; background-size:cover;padding: 13% 0% 22% 15%;">
   <div class="oe_row oe_spaced o_animate o_animate_in_children o_animate_offset_min">
     <h2 class="oe_slogan" style="font-size: 35px;color: #fff;font-weight: 900;text-transform: uppercase;text-align: left;margin: 0;margin-bottom: 16px;">
       Continuous Improvement Management
@@ -8,11 +8,11 @@
       Easy to manage
     </h3>
     <h5 class="oe_slogan" style="text-align: left;background: #fff;width: 293px;padding: 10px;color: #080808 !important;opacity: 1 !important;font-weight: 600;font-size: 20px;">
-      <a style="color: #080808 !important;" href="http://www.electronicamedica.com">Electrónica Médica</a>
+      <a style="color: #080808 !important;" href="http://www.electronicamedica.com">Electronica Medica</a>
     </h5>
-	  <a style="color: #080808 !important;" href="https://www.cybrosys.com" target="_blank">
+	  <a style="color: #080808 !important;" href="https://www.electronicamedica.com" target="_blank">
       <div style="width: 215px;margin-left: 57%;text-align: center;background: #ffffff;height: 215px;border-radius: 100%;display: flex;justify-content: center;align-items: center;box-shadow: 0 0 12px 4px #00000059;">
-      <img src="https://www.cybrosys.com/images/cybro-logo-oca.png" alt="cybrosys technologies" style="width: 180px;"/>            </div>
+      <img src="icon.png" alt="cybrosys technologies" style="width: 180px;"/>            </div>
     </a>
   </div>
 </section>
